--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <td bgcolor="gold">42<br>Mo</td>
             <td bgcolor="gold">43<br>Tc</td>
             <td  bgcolor="gold">44<br>Ru</td>
-            <td  bgcolor="gold">45<br>Rh</td>25
+            <td  bgcolor="gold">45<br>Rh</td>
             <td bgcolor="gold">46<br>Pd</td>
             <td bgcolor="gold">47<br>Ag</td>
             <td bgcolor="gold">48<br>Cd</td>
